# m365-copilot-proxy

./: .env.example  Cargo.toml  LICENSE  README.md  TOKEN_REFRESH.md  config.example.toml
.github/workflows/: ci.yml  release.yml
src/: bootstrap.rs  browser_install.rs  cdp.rs  config.rs  copilot.rs  doctor.rs  lib.rs  logging.rs  main.rs  models.rs  onboarding.rs  openapi.rs  routes.rs  runtime.rs  runtime_status.rs  session_store.rs  substrate_client.rs  token_store.rs  translator.rs  tray.rs  tui.rs
tests/: integration_test.rs
